# google-music-proto

./: .flake8  CHANGELOG.md  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.rst  make.bat  mobileclient.rst  musicmanager.rst
docs/mobileclient/: calls.rst  models.rst  schemas.rst  types.rst
docs/musicmanager/: calls.rst  models.rst
src/google_music_proto/: __about__.py  __init__.py  models.py  oauth.py
src/google_music_proto/mobileclient/: __init__.py  calls.py  constants.py  models.py  schemas.py  types.py
src/google_music_proto/musicmanager/: __init__.py  calls.py  constants.py  models.py  utils.py
src/google_music_proto/musicmanager/pb/: download_pb2.py  locker_pb2.py  uits_pb2.py  upload_pb2.py
tests/: test_musicmanager_utils.py
