[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "google-music-proto"
description = "Sans-I/O wrapper of Google Music API calls."
version = "2.5.0"

license = "MIT"

authors = ["thebigmunch <mail@thebigmunch.me>"]

readme = "README.md"

repository = "https://github.com/thebigmunch/google-music-proto"
homepage = "https://github.com/thebigmunch/google-music-proto"

[tool.poetry.dependencies]
python = "^3.6"

attrs = ">=18.2,<19.4"
audio-metadata = "^0.6"
marshmallow = "^2.0"
pendulum = "^2.0"
protobuf = "^3.5"

flake8 = { version = "^3.5", optional = true }
flake8-builtins = { version = "^1.0", optional = true }
flake8-comprehensions = { version = "^2.0", optional = true }
flake8-import-order = { version = "^0.18", optional = true }
flake8-import-order-tbm = { version = "^1.0", optional = true }
nox = { version = "^2019", optional = true }
sphinx = { version= "^2.0", optional = true}

[tool.poetry.extras]
dev = [
	"flake8",
	"flake8-builtins",
	"flake8-comprehensions",
	"flake8-import-order",
	"flake8-import-order-tbm",
	"nox",
	"sphinx",
]
doc = [
	"sphinx",
]
lint = [
	"flake8",
	"flake8-builtins",
	"flake8-comprehensions",
	"flake8-import-order",
	"flake8-import-order-tbm"
]
