[build-system]
requires = [ "poetry>=1.0.0" ]
build-backend = "poetry.masonry.api"


[tool.poetry]
name = "google-music-proto"
description = "Sans-I/O wrapper of Google Music API calls."
version = "2.8.0"

license = "MIT"

authors = ["thebigmunch <mail@thebigmunch.me>"]

readme = "README.md"

repository = "https://github.com/thebigmunch/google-music-proto"
homepage = "https://github.com/thebigmunch/google-music-proto"

[tool.poetry.dependencies]
python = "^3.6"

attrs = ">=18.2,<19.4"
audio-metadata = ">=0.10"
marshmallow = "^2.0"
pendulum = ">=2.0,<=3.0,!=2.0.5,!=2.1.0"  # Work around https://github.com/sdispater/pendulum/issues/454
protobuf = "^3.5"
tbm-utils = "^2.3"

coverage = { version = ">=5.0,<6.0", optional = true, extras = [ "toml" ] }
flake8 = { version = "^3.5", optional = true }
flake8-builtins = { version = "^1.0", optional = true }
flake8-comprehensions = { version = ">=2.0,<=4.0", optional = true }
flake8-import-order = { version = "^0.18", optional = true }
flake8-import-order-tbm = { version = "^1.0", optional = true }
nox = { version = "^2019", optional = true }
pytest = { version = ">=4.0,<6.0", optional = true }
sphinx = { version = "^2.0", optional = true}
sphinx-material = { version = "0.*", optional = true }

[tool.poetry.extras]
dev = [
	"coverage",
	"flake8",
	"flake8-builtins",
	"flake8-comprehensions",
	"flake8-import-order",
	"flake8-import-order-tbm",
	"nox",
	"pytest",
	"sphinx",
	"sphinx-material",
]
doc = [
	"sphinx",
	"sphinx-material",
]
lint = [
	"flake8",
	"flake8-builtins",
	"flake8-comprehensions",
	"flake8-import-order",
	"flake8-import-order-tbm",
]
test = [
	"coverage",
	"nox",
	"pytest"
]


[tool.coverage.run]
branch = true
source = [ "google_music_proto" ]
omit = [
	"**/__about__.py",
	"**/__init__.py",
	"**/constants.py",
	"**/oauth.py",
	"**/pb/*",
	"**/mobileclient/schemas.py",
	"**/mobileclient/types.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
